# miniclient

./: .editorconfig  .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  hatch_build.py  package-lock.json  package.json  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  development.md  getting-started.md  index.md  testing.md  usage.md
scripts/: setup-vendor-htmx.sh
src/htmxclient/: browser.py  runtime.py
src/htmxclient/js/: bootstrap.js  formdata.js  patch-dom-parser.js  patch-happy-dom-attr.js  patch-happy-dom.js  pre_globals.js  submit.js  urlsearch-dom-patches.js
src/htmxclient/js/polyfills/: node-buffer.js  node-fs.js  node-path.js  node-stream-web.js  node-stream.js  node-url.js  node-util.js  node-vm.js  npm-whatwg-mimetype.js
src/miniclient/: browser.py  runtime.py  wsgi.py
src/miniclient/js/: bootstrap.js  element_registry.js  formdata.js  patch-happy-dom-parser.js  patch-happy-dom-url.js  patch-happy-dom.js  pre_globals.js  submit.js
src/miniclient/js/polyfills/: node-child-process.js  node-console.js  node-crypto.js  node-http.js  node-net.js  node-perf-hooks.js  node-stream-web.js  node-stream.js  node-zlib.js  npm-buffer-image-size.js  npm-whatwg-mimetype.js
tests/: conftest.py  fetch_helpers.py  htmx_fetch_mock.py  htmx_fetch_mock_bridge.js  runner.js  test_browser.py  test_browser_api.py  test_browser_async.py  test_browser_sync.py  test_fetch.py  test_fetch_cookies.py  test_formdata.py  test_happy_dom_integration.py  test_htmx.py  test_htmx_integration.py  test_htmx_setup.py  test_node_http_polyfill.py  test_patch_dom_parser.py  test_patch_happy_dom.py  test_patch_happy_dom_url.py  test_runtime.py  test_sync_browser.py  test_wsgi_transport.py
tests/crosscheck/: conftest.py  crosscheck.py  serialize_dom.js  settle_init.js  strategies.py  test_crosscheck.py  test_dom_stateful.py  test_elements_stateful.py  test_form_stateful.py
tests/hypothesis/: test_browser_hypothesis.py  test_fetch_hypothesis.py
