# Metadados do projeto
[project]
name = "htmxclient"
version = "0.0.0"
description = "An HTMX powered python http client"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "httpx2~=2.5.0",
  "jsrun~=0.1.0",
]

# Grupos de dependências para desenvolvimento e testes
[dependency-groups]
dev = ["ipdb", "ipython", "ipython-autoimport"]
lint = ["prek~=0.4.5", "pyrefly~=1.1.1", "ruff~=0.15.20"]
test = [
  "httpx2-pytest~=1.0.1",
  "hypothesis~=6.155.7",
  "more-itertools~=11.1.0",
  "playwright~=1.60.0",
  "pydantic~=2.13.4",
  "pytest~=9.1.1",
  "pytest-asyncio~=1.4.0",
  "pytest-cov~=7.1.0",
  "pytest-playwright~=0.8.0",
  "pytest-timeout~=2.4.0",
  "pytest-xdist~=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htmxclient"]

[tool.pyrefly]
search_path = ["src", "tests"]

[tool.pytest]
addopts = ["--cov-report=html", "--hypothesis-show-statistics"]
filterwarnings = [
  "ignore:coroutine.*was never awaited:RuntimeWarning",
]
markers = [
  "cross: mark a test as a hypothesis cross check test",
  "hypo: mark a test as a general hypothesis test",
]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
  "I",  # https://docs.astral.sh/ruff/rules/#isort-i
  "E",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "W",
  "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "T201",  # https://docs.astral.sh/ruff/rules/print
  "Q",  # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
]
fixable = ["ALL"]
unfixable = [
  "F841",  # Report but don't auto-remove unused variables
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["htmxclient"]

[tool.uv]
default-groups = ["dev", "lint", "test"]
