# Metadados do projeto
[project]
name = "htmxclient"
version = "0.0.1"
description = "An HTMX powered python http client"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
  "httpx2~=2.5.0",
  "jsrun~=0.1.0",
]

[project.urls]
Homepage = "https://github.com/marciomazza/htmxclient"
Repository = "https://github.com/marciomazza/htmxclient"

# Grupos de dependências para desenvolvimento e testes
[dependency-groups]
dev = ["ipdb", "ipython", "ipython-autoimport"]
lint = ["hatchling", "prek~=0.4.5", "pyrefly~=1.1.1", "ruff~=0.15.20"]
test = [
  "httpx2-pytest~=1.0.1",
  "hypothesis~=6.155.7",
  "more-itertools~=11.1.0",
  "playwright~=1.60.0",
  "pydantic~=2.13.4",
  "pytest~=9.1.1",
  "pytest-asyncio~=1.4.0",
  "pytest-cov~=7.1.0",
  "pytest-playwright~=0.8.0",
  "pytest-timeout~=2.4.0",
  "pytest-xdist~=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/htmxclient"]

[tool.hatch.build.targets.wheel.force-include]
"node_modules/happy-dom/lib" = "htmxclient/_vendor/happy-dom/lib"
"node_modules/happy-dom/LICENSE" = "htmxclient/_vendor/happy-dom/LICENSE"
"node_modules/xpath/xpath.js" = "htmxclient/_vendor/xpath/xpath.js"
"node_modules/xpath/LICENSE" = "htmxclient/_vendor/xpath/LICENSE"
"node_modules/fast-text-encoding/text.min.js" = "htmxclient/_vendor/fast-text-encoding/text.min.js"
"node_modules/fast-text-encoding/LICENSE" = "htmxclient/_vendor/fast-text-encoding/LICENSE"
"node_modules/entities/dist/esm" = "htmxclient/_vendor/entities/dist/esm"
"node_modules/entities/LICENSE" = "htmxclient/_vendor/entities/LICENSE"
"node_modules/htmx.org/dist/htmx.js" = "htmxclient/_vendor/htmx.org/dist/htmx.js"
"node_modules/htmx.org/LICENSE" = "htmxclient/_vendor/htmx.org/LICENSE"

[tool.hatch.build.targets.sdist.force-include]
"node_modules/happy-dom/lib" = "node_modules/happy-dom/lib"
"node_modules/happy-dom/LICENSE" = "node_modules/happy-dom/LICENSE"
"node_modules/xpath/xpath.js" = "node_modules/xpath/xpath.js"
"node_modules/xpath/LICENSE" = "node_modules/xpath/LICENSE"
"node_modules/fast-text-encoding/text.min.js" = "node_modules/fast-text-encoding/text.min.js"
"node_modules/fast-text-encoding/LICENSE" = "node_modules/fast-text-encoding/LICENSE"
"node_modules/entities/dist/esm" = "node_modules/entities/dist/esm"
"node_modules/entities/LICENSE" = "node_modules/entities/LICENSE"
"node_modules/htmx.org/dist/htmx.js" = "node_modules/htmx.org/dist/htmx.js"
"node_modules/htmx.org/LICENSE" = "node_modules/htmx.org/LICENSE"

[tool.pyrefly]
search_path = ["src", "tests"]

[tool.pytest]
addopts = ["--cov-report=html", "-mnot cross"]
filterwarnings = [
  "ignore:coroutine.*was never awaited:RuntimeWarning",
]
markers = [
  "cross: mark a test as a hypothesis cross check test",
  "hypo: mark a test as a general hypothesis test",
]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
  "I",  # https://docs.astral.sh/ruff/rules/#isort-i
  "E",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "W",
  "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "T201",  # https://docs.astral.sh/ruff/rules/print
  "Q",  # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
]
fixable = ["ALL"]
unfixable = [
  "F841",  # Report but don't auto-remove unused variables
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["htmxclient"]

[tool.uv]
default-groups = ["dev", "lint", "test"]
